# project-fs

./: .gitignore  Cargo.toml  history.json  package-lock.json  package.json  vite.config.js
.svelte-kit/: ambient.d.ts
fs_tree_db/: .gitignore  Cargo.toml
fs_tree_db/examples/: demo.rs
fs_tree_db/src/: excludes.rs  lib.rs  tree.rs
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: functions.rs  lib.rs  macros.rs  main.rs  parser.rs  types.rs
src/lib/: index.ts
src/lib/components/: ParseError.svelte  SearchResult.svelte
src/lib/stores/: columns.ts  parse_error.ts  parse_erros_arg.ts  user_config.ts
src/routes/: +layout.svelte  +page.svelte
