[package]
name = "fs_tree_db"
version = "0.1.0"
edition = "2021"

[features]
default = ["peak"] 
low = []
medium = []
high = []
peak = []

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }


[profile.release]
opt-level = "z"         # or "3" for max speed
lto = true              # link time optimization
codegen-units = 1       # for smaller binary
panic = "abort"         # no backtrace support, but smaller
